fix zigzag layout on mobile

--- a/style.css
+++ b/style.css
@@ -4261,6 +4261,15 @@ SVGs
 
 	/* All Mobile Sizes */
 	@media only screen and (max-width: 767px) {
+		.layout6 article {
+			display: block;
+		}
+		.posts-layout .list-image {
+			width: 100% !important;
+		}
+		.posts-layout .list-image .entry-thumb {
+			margin: 0 0 30px !important;
+		}
 		.col-grow-mobile {
 			-webkit-box-flex: 1;
 			-ms-flex-positive: 1;
